--- a/public/index.html
+++ b/public/index.html
@@ -217,7 +217,7 @@
 
 
 <div ng-hide="loggedIn" class="container">
-    <h1 style="color: white">You are logged in as {{loggedInUser}}</h1>
+    <h1 style="color: white">You are logged in as {{loggedInUser}} </h1>
 
     <table  style="background-color: deepskyblue; color:black; " class="table table-hover" ng-repeat="a in allUsers">
    <thead>
@@ -232,7 +232,7 @@
           {{a.id}} <td> {{a.username}}</td>
         </td>
 
-            <td><button type="submit" class="btn btn-primary btn-block btn-large" ng-click="delete(a.id)">Delete user.</button></td>
+            <td><button type="submit" class="btn btn-primary btn-block btn-large" ng-click="delete(a.username)">Delete user.</button></td>
             <td><button type="submit" class="btn btn-primary btn-block btn-large" ng-click="openUpdateModal(a)">Update user.</button></td>
 
         </tr>
@@ -272,8 +272,6 @@
             <div class="modal-body">
                 <h3>Username</h3>
                 <input id="userNameToUpdate" type="text" name="username">
-                <h3>Password</h3>
-                <input id="userPasswordToUpdate" type="text" name="password">
                 <button type="submit" class="btn btn-default" data-dismiss="modal" ng-click="update()">Update</button>
                 <p></p>
             </div>
